--- a/src/sass/pages/_Mission.scss
+++ b/src/sass/pages/_Mission.scss
@@ -4,16 +4,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  margin-top: 5rem;
   //   ? for some reason I need this both here and in the media query
   &-bg {
     width: 100vw;
     height: 100%;
-
+    // not affecting anything atm
     margin-top: -20vw;
     padding-bottom: 5vh;
     // this affects the cards that did not have enough space from the above section (green card
-    padding-top: 10vh;
+    padding-top: 15vh;
 
     background-image: linear-gradient(
         to right bottom,
@@ -115,16 +115,18 @@
   }
 }
 
-@media (max-width: 424px) {
+@media (max-width: 425px) {
   .mission {
     &-bg {
-      margin-top: -20vw;
+      margin-top: -30vw;
     }
   }
 }
 
 @media (min-width: 768px) {
   .mission {
+    margin-top: 0;
+
     &__text {
       &--title {
         font-size: $title-desktop-size;
@@ -134,16 +136,6 @@
         line-height: 4vw;
       }
     }
-    // &-card {
-    //   width: 60%;
-
-    //   &__text {
-    //     &--paragraph {
-    //       @include cardParagraphFontSize(tablet);
-    //       margin-bottom: 0;
-    //     }
-    //   }
-    // }
   }
 }
 
@@ -183,20 +175,6 @@
     &__text {
       &--paragraph {
         width: 50%;
-      }
-    }
-  }
-}
-// * This is to test if the value cards container need more top margin so they are not covered
-// * by the whiite background
-@media (min-width: 1900px) {
-  .mission {
-    &__statement-container {
-      width: 50%;
-    }
-
-    &__text {
-      &--paragraph {
         .stsm {
           margin-top: 3rem;
           display: flex;
